hphp/hack/test/typecheck/array_non_static.php.coeffects.exp
File "array_non_static.php", line 8, characters 36-40:
Invalid expression in constant initializer (Parsing[1002])
File "array_non_static.php", line 8, characters 36-40:
Variable `$#capability` is undefined, or not always defined. (Naming[2050])
